--- a/package.json
+++ b/package.json
@@ -22,17 +22,23 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "fs-extra": "^11.2.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
     "path": "^0.12.7",
     "pg": "^8.15.6",
     "pg-promise": "^11.13.0",
-    "puppeteer": "^24.8.0"
+    "puppeteer": "^24.8.0",
+    "xss": "^1.0.14"
   },
   "engines": {
     "node": ">=14.0.0"
